Improve detection of Intel C/C++ compilers. (#18001)
* Improve detection of Intel C/C++ compilers.

My version of Intel C/C++ reports these versions:

✅ starscream% icc -V
Intel(R) C Intel(R) 64 Compiler for applications running on Intel(R) 64, Version 19.1.1.217 Build 20200306
Copyright (C) 1985-2020 Intel Corporation.  All rights reserved.
FOR NON-COMMERCIAL USE ONLY

✅ starscream% icpc -V
Intel(R) C++ Intel(R) 64 Compiler for applications running on Intel(R) 64, Version 19.1.1.217 Build 20200306
Copyright (C) 1985-2020 Intel Corporation.  All rights reserved.
FOR NON-COMMERCIAL USE ONLY

* simplified case for detecting Intel C++ compiler

* update authors for plicease

(cherry picked from commit 8ffcbbbe4a4411bb0971e61a39fa2608a4ef5145)

--- a/AUTHORS
+++ b/AUTHORS
@@ -466,6 +466,7 @@ Goro Fuji                      <gfuji@cpan.org>
 Grace Lee                      <grace@hal.com>
 Graham Barr                    <gbarr@pobox.com>
 Graham Knop                    <haarg@haarg.org>
+Graham Ollis                   <plicease@cpan.org>
 Graham TerMarsch               <graham@howlingfrog.com>
 Grant McLean                   <grantm@cpan.org>
 Greg Bacon                     <gbacon@itsc.uah.edu>
