Adjust AUTHORS file with new authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -32,6 +32,7 @@ Achim Bohnet                   <ach@mpe.mpg.de>
 Achim Gratz                    <achim.gratz@stromeko.de>
 Adam Flott                     <adam@npjh.com>
 Adam Hartley                   <git@ahartley.com>
+Adam Hartley                   @BytesGuy
 Adam Kennedy                   <adam@ali.as>
 Adam Krolnik                   <adamk@gypsy.cyrix.com>
 Adam Milner                    <carmiac@nmt.edu>
@@ -458,6 +459,7 @@ Gerrit P. Haase                <gp@familiehaase.de>
 Gideon Israel Dsouza           <gideon@cpan.org>
 Giles Lean                     <giles@nemeton.com.au>
 Gisle Aas                      <gisle@aas.no>
+vividsnow                      @vividsnow
 Glenn D. Golden                <gdg@zplane.com>
 Glenn Linderman                <perl@nevcal.com>
 Gordon J. Miller               <gjm@cray.com>
@@ -1044,6 +1046,7 @@ Rafael Garcia-Suarez           <rgs@consttype.org>
 Rainer Keuchel                 <keuchel@allgeier.com>
 Rainer Orth                    <ro@TechFak.Uni-Bielefeld.DE>
 Rainer Tammer                  <tammer@tammer.net>
+raiph                          @raiph
 Rajesh Mandalemula             <rajesh.mandalemula@deshaw.com>
 Rajesh Vaidheeswarran          <rv@gnu.org>
 Ralf S. Engelschall            <rse@engelschall.com>
