--- a/AUTHORS
+++ b/AUTHORS
@@ -31,7 +31,6 @@ Abir Viqar                     <abiviq@hushmail.com>
 Achim Bohnet                   <ach@mpe.mpg.de>
 Achim Gratz                    <achim.gratz@stromeko.de>
 Adam Flott                     <adam@npjh.com>
-Adam Hartley                   <git@ahartley.com>
 Adam Hartley                   @BytesGuy
 Adam Kennedy                   <adam@ali.as>
 Adam Krolnik                   <adamk@gypsy.cyrix.com>
@@ -1046,7 +1045,7 @@ Rafael Garcia-Suarez           <rgs@consttype.org>
 Rainer Keuchel                 <keuchel@allgeier.com>
 Rainer Orth                    <ro@TechFak.Uni-Bielefeld.DE>
 Rainer Tammer                  <tammer@tammer.net>
-raiph                          @raiph
+raiph                          <raiph.mellor@gmail.com>
 Rajesh Mandalemula             <rajesh.mandalemula@deshaw.com>
 Rajesh Vaidheeswarran          <rv@gnu.org>
 Ralf S. Engelschall            <rse@engelschall.com>
