Use GNU Bison's named references
Usage of Bison's named references makes actions little bit easier
to read and maintain.

--- a/AUTHORS
+++ b/AUTHORS
@@ -175,6 +175,7 @@ Brad Lanam                     <bll@gentoo.com>
 Bradley Dean                   <bjdean@bjdean.id.au>
 Bram                           <perl-rt@wizbit.be>
 Brandon Black                  <blblack@gmail.com>
+Branislav Zahradník            <barney@cpan.org>
 Brendan Byrd                   <BBYRD@CPAN.org>
 Brendan O'Dea                  <bod@debian.org>
 Breno G. de Oliveira           <garu@cpan.org>
