--- a/AUTHORS
+++ b/AUTHORS
@@ -1168,6 +1168,7 @@ Simon Parsons                  <S.Parsons@ftel.co.uk>
 Simon Schubert                 <corecode@fs.ei.tum.de>
 Sinan Unur                     <sinan@unur.com>
 Sisyphus                       <sisyphus@cpan.org>
+Sizhe Zhao                     <prc.zhao@outlook.com>
 Slaven Rezic                   <slaven@rezic.de>
 Smylers                        <smylers@stripey.com>
 Solar Designer                 <solar@openwall.com>
