README.cn: Fix pod

--- a/README.cn
+++ b/README.cn
@@ -149,6 +149,6 @@ Jarkko Hietaniemi E<lt>jhi@iki.fiE<gt>
 
 Audrey Tang (唐凤) E<lt>audreyt@audreyt.orgE<gt>
 
-Sizhe Zhao E<lt>prc.zhao@outlook.com<gt>
+Sizhe Zhao E<lt>prc.zhao@outlook.comE<gt>
 
 =cut
