--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -288,6 +288,11 @@ L</Platform Support> section, instead.
 
 The minimum supported Bison version is now 2.4, and the maxiumm is 3.7.
 
+=item *
+
+Newer 64-bit versions of the Intel C/C++ compiler are now recognised
+and have the correct flags set.
+
 =back
 
 =head1 Testing
