Add perldelta entry for perldebguts ${"_<$filename"} fix
See commit 6e764e36cf6a7c109e74ca4ccafbba27a0b422cd

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -283,6 +283,11 @@ section.
 
 Additionally, the following selected changes have been made:
 
+=head3 L<perldebguts>
+
+Correct the description of the scalar C<< ${"_<$filename"} >>
+variables.
+
 =head3 L<perlfunc>
 
 =over 4
