--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -379,11 +379,13 @@ Correct C<my_rpeep> example in perlguts.
 
 =over 4
 
+=item *
+
 The C<< <> >> and C<<< <<>> >>> operators are commonly referred to as
 the diamond and double diamond operators respectively, but that wasn't
 mentioned previously in their documentation.
 
-=over 4
+=item *
 
 Document range op behavior change.
 
