--- a/pod/perldiag.pod
+++ b/pod/perldiag.pod
@@ -3831,6 +3831,9 @@ is aliased to a constant in the look I<LIST>:
         $n *= 2; # modifies the $x, but fails on attempt to
     }            # modify the 2
 
+L<PerlIO::scalar> will also produce this message as a warning if you
+attempt to open a read-only scalar for writing.
+
 =item Modification of non-creatable array value attempted, %s
 
 (F) You tried to make an array value spring into existence, and the
